# mpqcht

./: .gitignore  Cargo.toml  README.md  build-wizard.sh  build.zig  build.zig.zon  config.toml  dev-mnem-b.txt  dev-mnem.txt  scratch.js  turnserver.conf
client/: Cargo.toml  config.toml  crypto.zig  index.css  index.html  index.js
client/public/: index.css  index.html  index.js
client/src/: lib.rs
client/ssc/: cert.pem  key.pem
client/zig-crypto/: build.sh  crypto.zig  modified-ecdsa.zig
docker-build/: Dockerfile
server/: Cargo.toml
server/src/: main.rs
trained-compression/: Cargo.toml  build.rs  dataset.txt
trained-compression/src/: lib.rs  trained.rs
zig-server/: cf.zig  main.zig
