[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bip39 = { version = "2.0.0", features = ["rand"] }
getrandom = { version = "0.2.15", features = ["js"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "arithmetic"] }
#pqc_kyber = { version = "0.7.1", features = ["std", "wasm-bindgen", "getrandom"] }
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.92"

